--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
+
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="article_item_padding">9dp</dimen>
+    <dimen name="article_item_padding_bottom">6dp</dimen>
+    <dimen name="article_item_title_height_text">48dp</dimen>
+    <dimen name="article_item_title_margin_bottom">6dp</dimen>
+    <dimen name="article_item_info_margin_top">6dp</dimen>
+    <dimen name="article_item_date_width">114dp</dimen>
+
 </resources>
