--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,9 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context=".MainActivity">
-    <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
+      tools:context=".presentation.view.MainActivity">
+    <item android:id="@+id/about_app"
+          android:title="@string/menu_about_app"
           android:orderInCategory="100"
           app:showAsAction="never"/>
 </menu>
