--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,34 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowNoTitle">true</item>
+
+        <item name="colorPrimary" tools:ignore="NewApi">@color/primary</item>
+        <item name="colorPrimaryDark" tools:ignore="NewApi">@color/primary_dark</item>
+        <item name="colorAccent" tools:ignore="NewApi">@color/accent</item>
+
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+
+        <item name="android:textAppearanceButton">@style/TextAppearance.Button</item>
+
+        <item name="colorButtonNormal">@color/button_color</item>
+        <item name="colorControlHighlight">@color/primary_dark</item>
+        <item name="android:colorEdgeEffect" tools:ignore="NewApi">@color/primary_dark</item>
+
+        <item name="android:alertDialogTheme">@style/CommonDialogTheme</item>
+    </style>
+
+    <!-- Button styles -->
+    <style name="TextAppearance.Button" parent="Base.TextAppearance.AppCompat.Button">
+        <item name="android:textColor">?android:attr/textColorPrimaryInverse</item>
+    </style>
+
+    <!-- Dialog styles -->
+    <style name="CommonDialogTheme" parent="android:Theme.Holo.Light.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
 </resources>
